fix(ui): various fixes
Connection card
 * make sure icon/headings are aligned
 * absolutely position tech preview
 * disable title hover styles

* Fix misalignment of API provider operation list
* remove drag 'n drop left indent
* Space out lines in drag and drop box
* Set global pf4 font size to sm (12px), and remove 'font-size' declaration from body
* keep list view title/name cell from breaking in middle of word

--- a/app/ui-react/packages/ui/src/index.css
+++ b/app/ui-react/packages/ui/src/index.css
@@ -15,6 +15,7 @@
 @import url('~@patternfly/patternfly/utilities/Display/display.css');
 
 :root {
+  --pf-global--FontSize--md: var(--pf-global--FontSize--sm);
   --pf-global--link--Color: #0088ce;
   --pf-c-nav__list-link--m-current--after--BackgroundColor: #0088ce;
   --pf-global--link--Color--hover: #00659c;
@@ -44,7 +45,6 @@
 }
 
 body {
-  font-size: var(--pf-global--FontSize--sm);
   line-height: var(--pf-global--LineHeight--sm);
   color: var(--pf-global--Color--100);
 }
@@ -178,5 +178,5 @@ body {
 
 .list-view-pf .list-group-item-heading {
   white-space: normal;
-  word-break: break-all;
+  word-break: break-word;
 }
